// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeaturesSection renders correctly and matches snapshot 1`] = `
<div>
  <section
    class="bg-black py-16"
  >
    <div
      class="container mx-auto px-4"
    >
      <div
        class="mb-12 text-center"
      >
        <h2
          class="mb-4 text-4xl font-bold text-white"
        >
          Test Features
        </h2>
        <p
          class="text-sm text-gray-400"
        >
          Test Subtitle
        </p>
      </div>
      <div
        class="grid gap-6 md:grid-cols-2 lg:grid-cols-3"
      >
        <div
          class="relative h-[600px] overflow-hidden rounded-lg bg-gradient-to-b from-purple-600 to-teal-500 p-6 text-white"
          data-testid="feature-card"
        >
          <div
            class="absolute inset-0 z-0"
          >
            <img
              alt="Card 1"
              class="object-cover"
              data-nimg="fill"
              decoding="async"
              sizes="100vw"
              src="/_next/image?url=%2Fimage1.jpg&w=3840&q=75"
              srcset="/_next/image?url=%2Fimage1.jpg&w=640&q=75 640w, /_next/image?url=%2Fimage1.jpg&w=750&q=75 750w, /_next/image?url=%2Fimage1.jpg&w=828&q=75 828w, /_next/image?url=%2Fimage1.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimage1.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimage1.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimage1.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimage1.jpg&w=3840&q=75 3840w"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
            <div
              class="absolute inset-0 bg-gradient-to-b from-transparent via-purple-600/50 to-teal-900/90"
            />
          </div>
          <div
            class="relative z-10 flex h-full flex-col justify-between"
          >
            <h3
              class="text-3xl font-bold"
            >
              Card 1
            </h3>
            <div
              class="space-y-4"
            >
              <p
                class="text-xl text-gray-100 mb-5"
              >
                Description 1
              </p>
              <a
                href="/card1"
              >
                <button
                  class="inline-flex items-center justify-center rounded-md text-sm font-semibold transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background underline-offset-4 h-10 group text-white hover:no-underline bg-white bg-opacity-5 p-4"
                >
                  Learn More
                   
                  <span
                    class="ml-2 transition-transform group-hover:translate-x-1"
                  >
                    →
                  </span>
                </button>
              </a>
            </div>
          </div>
        </div>
        <div
          class="relative h-[600px] overflow-hidden rounded-lg bg-gradient-to-b from-purple-600 to-teal-500 p-6 text-white"
          data-testid="feature-card"
        >
          <div
            class="absolute inset-0 z-0"
          >
            <img
              alt="Card 2"
              class="object-cover"
              data-nimg="fill"
              decoding="async"
              sizes="100vw"
              src="/_next/image?url=%2Fimage2.jpg&w=3840&q=75"
              srcset="/_next/image?url=%2Fimage2.jpg&w=640&q=75 640w, /_next/image?url=%2Fimage2.jpg&w=750&q=75 750w, /_next/image?url=%2Fimage2.jpg&w=828&q=75 828w, /_next/image?url=%2Fimage2.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimage2.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimage2.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimage2.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimage2.jpg&w=3840&q=75 3840w"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
            <div
              class="absolute inset-0 bg-gradient-to-b from-transparent via-purple-600/50 to-teal-900/90"
            />
          </div>
          <div
            class="relative z-10 flex h-full flex-col justify-between"
          >
            <h3
              class="text-3xl font-bold"
            >
              Card 2
            </h3>
            <div
              class="space-y-4"
            >
              <p
                class="text-xl text-gray-100 mb-5"
              >
                Description 2
              </p>
              <a
                href="/card2"
              >
                <button
                  class="inline-flex items-center justify-center rounded-md text-sm font-semibold transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background underline-offset-4 h-10 group text-white hover:no-underline bg-white bg-opacity-5 p-4"
                >
                  Get Started
                   
                  <span
                    class="ml-2 transition-transform group-hover:translate-x-1"
                  >
                    →
                  </span>
                </button>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`FeaturesSection renders without subtitle when not provided 1`] = `
<div>
  <section
    class="bg-black py-16"
  >
    <div
      class="container mx-auto px-4"
    >
      <div
        class="mb-12 text-center"
      >
        <h2
          class="mb-4 text-4xl font-bold text-white"
        >
          Test Features
        </h2>
      </div>
      <div
        class="grid gap-6 md:grid-cols-2 lg:grid-cols-3"
      >
        <div
          class="relative h-[600px] overflow-hidden rounded-lg bg-gradient-to-b from-purple-600 to-teal-500 p-6 text-white"
          data-testid="feature-card"
        >
          <div
            class="absolute inset-0 z-0"
          >
            <img
              alt="Card 1"
              class="object-cover"
              data-nimg="fill"
              decoding="async"
              sizes="100vw"
              src="/_next/image?url=%2Fimage1.jpg&w=3840&q=75"
              srcset="/_next/image?url=%2Fimage1.jpg&w=640&q=75 640w, /_next/image?url=%2Fimage1.jpg&w=750&q=75 750w, /_next/image?url=%2Fimage1.jpg&w=828&q=75 828w, /_next/image?url=%2Fimage1.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimage1.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimage1.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimage1.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimage1.jpg&w=3840&q=75 3840w"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
            <div
              class="absolute inset-0 bg-gradient-to-b from-transparent via-purple-600/50 to-teal-900/90"
            />
          </div>
          <div
            class="relative z-10 flex h-full flex-col justify-between"
          >
            <h3
              class="text-3xl font-bold"
            >
              Card 1
            </h3>
            <div
              class="space-y-4"
            >
              <p
                class="text-xl text-gray-100 mb-5"
              >
                Description 1
              </p>
              <a
                href="/card1"
              >
                <button
                  class="inline-flex items-center justify-center rounded-md text-sm font-semibold transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background underline-offset-4 h-10 group text-white hover:no-underline bg-white bg-opacity-5 p-4"
                >
                  Learn More
                   
                  <span
                    class="ml-2 transition-transform group-hover:translate-x-1"
                  >
                    →
                  </span>
                </button>
              </a>
            </div>
          </div>
        </div>
        <div
          class="relative h-[600px] overflow-hidden rounded-lg bg-gradient-to-b from-purple-600 to-teal-500 p-6 text-white"
          data-testid="feature-card"
        >
          <div
            class="absolute inset-0 z-0"
          >
            <img
              alt="Card 2"
              class="object-cover"
              data-nimg="fill"
              decoding="async"
              sizes="100vw"
              src="/_next/image?url=%2Fimage2.jpg&w=3840&q=75"
              srcset="/_next/image?url=%2Fimage2.jpg&w=640&q=75 640w, /_next/image?url=%2Fimage2.jpg&w=750&q=75 750w, /_next/image?url=%2Fimage2.jpg&w=828&q=75 828w, /_next/image?url=%2Fimage2.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fimage2.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fimage2.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fimage2.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fimage2.jpg&w=3840&q=75 3840w"
              style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
            />
            <div
              class="absolute inset-0 bg-gradient-to-b from-transparent via-purple-600/50 to-teal-900/90"
            />
          </div>
          <div
            class="relative z-10 flex h-full flex-col justify-between"
          >
            <h3
              class="text-3xl font-bold"
            >
              Card 2
            </h3>
            <div
              class="space-y-4"
            >
              <p
                class="text-xl text-gray-100 mb-5"
              >
                Description 2
              </p>
              <a
                href="/card2"
              >
                <button
                  class="inline-flex items-center justify-center rounded-md text-sm font-semibold transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none ring-offset-background underline-offset-4 h-10 group text-white hover:no-underline bg-white bg-opacity-5 p-4"
                >
                  Get Started
                   
                  <span
                    class="ml-2 transition-transform group-hover:translate-x-1"
                  >
                    →
                  </span>
                </button>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
